<resources>
    <string name="app_name">Jago Game 10119259</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="repeat_yout_password">Repeat Yout Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="naufal_daffa_ilyasa">NAUFAL DAFFA ILYASA</string>
</resources>